tests/show-variable.stderr
error: cannot display `my-variable` on the screen
   ┌─ test:4:1
   │
 4 │ show my-variable
   │ ^^^^ could not find instance `Show Cannot-Be-Shown`
   │
   ┌─ <dir>/std/io.wpl:26:17
   │
26 │ show :: A where (Show A) => A -> ()
   │                 -------- required by this bound here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

